Domain model, databse seed

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# active project profile its test profile
+spring.profiles.active=test
 
+# jpa just work from service layer to deep
+spring.jpa.open-in-view=false
